--- a/index.html
+++ b/index.html
@@ -20,18 +20,17 @@
         <a href="#" class="menu-link header__link">Blog</a>
         <a href="#" class="menu-link header__link">Contact</a>
       </nav>
-
-      <div class="container promo">
-        <div class="heading">
-          <div class="title header__title">Pet<br />Care</div>
-          <div class="subtitle header__subtitle">House Call Veterinarian</div>
-          <button class="button header__button">SHEDULE A VISIT</button>
-        </div>
-        <div class="promo-image">
-          <img src="img/dog.png" alt="Dog" class="image header__image" />
-        </div>
-      </div>
     </header>
+    <section class="container promo">
+      <div class="promo__pre">
+        <div class="promo__title">Pet<br />Care</div>
+        <div class="promo__subtitle">House Call Veterinarian</div>
+        <button class="btn promo__button">SHEDULE A VISIT</button>
+      </div>
+      <div class="promo__after">
+        <img src="img/dog.png" alt="Dog" class="image promo__image" />
+      </div>
+    </section>
 
     <main class="wrapper">
       <div class="about">
@@ -46,7 +45,7 @@
             tell a story and let your users know a little more about you.
           </p>
           <!-- /.about__content -->
-          <button class="about__button">BOOK NOW</button>
+          <button class="about__button btn">BOOK NOW</button>
           <!-- /.about__button -->
         </div>
         <!-- /.about__info -->
@@ -54,7 +53,7 @@
       <!-- /.about -->
 
       <div class="services">
-        <h1 class="service__title">Services</h1>
+        <h1 class="service__title title">Services</h1>
         <!-- /.service__title -->
         <div class="service__cards">
           <div class="service__card">
@@ -67,7 +66,7 @@
               describe your service. Feel free to change the image.
             </p>
             <!-- /.service__content -->
-            <buttob class="service__button">BOOK NOW</buttob>
+            <buttob class="service__button btn">BOOK NOW</buttob>
             <!-- /.service__button -->
           </div>
           <!-- /.service__card -->
@@ -81,7 +80,7 @@
               describe your service. Feel free to change the image.
             </p>
             <!-- /.service__content -->
-            <buttob class="service__button">BOOK NOW</buttob>
+            <buttob class="service__button btn">BOOK NOW</buttob>
             <!-- /.service__button -->
           </div>
           <!-- /.service__card -->
@@ -95,15 +94,15 @@
               describe your service. Feel free to change the image.
             </p>
             <!-- /.service__content -->
-            <buttob class="service__button">BOOK NOW</buttob>
+            <buttob class="service__button btn">BOOK NOW</buttob>
             <!-- /.service__button -->
           </div>
           <!-- /.service__card -->
         </div>
       </div>
       <!-- /.services -->
-      <div class="clients">
-        <h1 class="client__title">Love My Clients</h1>
+      <div class="client">
+        <h1 class="client__title title">Love My Clients</h1>
         <!-- /.clients__title -->
         <div class="client__photos">
           <img src="/img/client1.png" alt="client" class="client__img" />
@@ -119,7 +118,7 @@
       <div class="wrapper">
         <img src="/img/footer__img.png" alt="dog" class="footer__img" />
         <div class="footer__content">
-          <div class="contacts">
+          <div class="contact">
             <h1 class="contact__title">Contact</h1>
             <div class="contact__info">
               <div class="phone">
