fix path to img

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <main class="wrapper">
       <div class="about">
-        <img src="/img/aboutUs.png" alt="About us" class="about__img" />
+        <img src="./img/aboutUs.png" alt="About us" class="about__img" />
         <div class="about__info">
           <h1 class="about__title">About me</h1>
           <!-- /.about__title -->
@@ -57,7 +57,7 @@
         <!-- /.service__title -->
         <div class="service__cards">
           <div class="service__card">
-            <img src="/img/service1.png" alt="dog" class="service__img" />
+            <img src="./img/service1.png" alt="dog" class="service__img" />
             <h1 class="service__card__title">Checkup</h1>
             <!-- /.service__title -->
             <p class="service__content">
@@ -71,7 +71,7 @@
           </div>
           <!-- /.service__card -->
           <div class="service__card">
-            <img src="/img/service2.png" alt="dog" class="service__img" />
+            <img src="./img/service2.png" alt="dog" class="service__img" />
             <h1 class="service__card__title">Grooming</h1>
             <!-- /.service__title -->
             <p class="service__content">
@@ -85,7 +85,7 @@
           </div>
           <!-- /.service__card -->
           <div class="service__card">
-            <img src="/img/service3.png" alt="dog" class="service__img" />
+            <img src="./img/service3.png" alt="dog" class="service__img" />
             <h1 class="service__card__title">Dental Care</h1>
             <!-- /.service__title -->
             <p class="service__content">
@@ -105,9 +105,9 @@
         <h1 class="client__title title">Love My Clients</h1>
         <!-- /.clients__title -->
         <div class="client__photos">
-          <img src="/img/client1.png" alt="client" class="client__img" />
-          <img src="/img/client2.png" alt="client" class="client__img" />
-          <img src="/img/client3.png" alt="client" class="client__img" />
+          <img src="./img/client1.png" alt="client" class="client__img" />
+          <img src="./img/client2.png" alt="client" class="client__img" />
+          <img src="./img/client3.png" alt="client" class="client__img" />
         </div>
         <!-- /.clients__photo -->
       </div>
@@ -116,7 +116,7 @@
 
     <footer class="footer">
       <div class="wrapper">
-        <img src="/img/footer__img.png" alt="dog" class="footer__img" />
+        <img src="./img/footer__img.png" alt="dog" class="footer__img" />
         <div class="footer__content">
           <div class="contact">
             <h1 class="contact__title">Contact</h1>
@@ -142,15 +142,15 @@
           </div>
           <div class="links">
             <a href="#" class="twitter link"
-              ><img src="/img/twitter.svg " alt="twitter" class="link__img"
+              ><img src="./img/twitter.svg " alt="twitter" class="link__img"
             /></a>
             <!-- /.twitter -->
             <a href="#" class="facebook link"
-              ><img src="/img/facebook.svg" alt="facebook" class="link__img"
+              ><img src="./img/facebook.svg" alt="facebook" class="link__img"
             /></a>
             <!-- /.facebook -->
             <a href="#" class="instagram link"
-              ><img src="/img/instagram.svg" alt="instagram" class="link__img"
+              ><img src="./img/instagram.svg" alt="instagram" class="link__img"
             /></a>
             <!-- /.instagram -->
           </div>
